--- a/contact/templates/email.html
+++ b/contact/templates/email.html
@@ -11,6 +11,7 @@
         <div class="row m-auto">
             <div class="col-sm-12">
                 <h1 class="text-center text-uppercase mt-5 mb-3 text-danger">Contact Us</h1>
+                <p class="text-white">Please include in your message your preferred contact details.</p>
                 <form method="post" class="text-danger">
                     {% csrf_token %}
                     {{ form | as_bootstrap}}
