--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -6,13 +6,13 @@
 <div class="mt-5 text-danger text-capitalize text-center">
     <h1>all products</h1>
 </div>
-<hr class="red-line mt-3 mb-3">
+<hr class="red-line my-3">
 <!-- All Product display -->
 <div class="row row-flex">
     {% for product in products.object_list  %}
-        <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
+        <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
             <div class="row row-flex justify-content-center">
-                <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
+                <div class="mt-4 col-sm-12 col-md-10 col-lg-10 align-items-center">
                     <a href='/products/{{ product.slug }}'>
                         <div class="card card-body">
                             <div class="card-img-top product-image mb-1" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
