--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -40,14 +40,24 @@
     </div>
 </div>
 <hr>
+ <!-- Filter and more search option -->
+<div class="row justify-content-center">
+    <form class="form-inline px-4 mt-4" action="{% url 'filter' %}" method="GET">
+        <p class="font-weight-bolder h5 mr-2">Filter your search by:</p>
+        <input class="form-control mb-1 mr-sm-2" type="search" placeholder="Name: iPhone" name="q">
+        <input class="form-control mb-1 mr-sm-2" type="search" placeholder="Brand: Apple" name="brand"/>
+        <input class="form-control mb-1 mr-sm-2" type="year" placeholder="Year: 2019" name="year"/>
+        <button class="btn btn-dark mb-1 mr-3" type="submit"><i class="fa fa-search mr-1"></i>Search</button>
+    </form>
+</div>
 <!-- Products  -->
 <div class="row row-flex main-products-background">
     {% for product in products %}
     <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="row row-flex justify-content-center">
-            <div class="mt-5 col-sm-12 col-md-10 col-lg-10 align-items-center">
+            <div class="mt-2 col-sm-12 col-md-10 col-lg-10 align-items-center">
                 <a href='/products/{{ product.slug }}'>
-                    <div class="card card-body mt-5 mb-5">
+                    <div class="card card-body my-3">
                         <div class="card-img-top product-image mb-1" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                             <h5 class="card-title text-uppercase">{{ product.name }}</h5>
                             <p class="card-text fa fa-dollar">{{ product.price }}</p>
