--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 /*-------------------------------------------- General */
 /* To push footer at the bottom of the page
 header height is 56px and footer height is 211px */
-
 .main-content {
     min-height: calc(100vh - (56px + 211px));
     padding-left: 0;
@@ -81,7 +80,7 @@ a:link {
     background-repeat: no-repeat;
     width: 300px;
     height: 300px;
-    margin-left: 0;
+    margin: 0 auto;
 }
 
  /*-------------------------------------------- Login form */
