--- a/templates/base.html
+++ b/templates/base.html
@@ -63,12 +63,16 @@
         </div>
     </nav>
     {% if messages %}
-    <div class="alert alert-primary">
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
         {% for message in messages %} 
             {{ message }} 
         {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
     {% endif %} 
+    
     <div class="container-fluid main-content">
     {% block content %}
     <!-- main area for iShop project -->
@@ -95,6 +99,14 @@
                 <h4>Support</h4>
                 <ul class="list-unstyled">
                     <li><a href="{% url 'email' %}">Contact Us </a></li>
+                    <li>
+                        <address>
+                            <strong>iShop</strong><br>
+                            1234 Street<br>
+                            Dublin, Ireland<br>
+                            <abbr title="Phone">P:</abbr> (353) - 871127890
+                        </address>
+                    </li>
                 </ul>
             </div>
         </div>
