--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
                             <strong>iShop</strong><br>
                             1234 Street<br>
                             Dublin, Ireland<br>
-                            <abbr title="Phone">P:</abbr> (353) - 871127890
+                            <abbr title="Phone"></abbr><i class="fa fa-phone"></i> (353) - 871127890
                         </address>
                     </li>
                 </ul>
@@ -132,5 +132,8 @@
     {% block head_js %}
     <!-- Inject this into base.html only when checkout is clicked -->
     {% endblock head_js %}
+    {% block zoomin_js %}
+    <!-- Inject this into base.html only when product image is hover -->
+    {% endblock zoomin_js %}
 </body>
 </html>
