--- a/products/templates/more_products.html
+++ b/products/templates/more_products.html
@@ -17,7 +17,7 @@
                         <div class="card card-body">
                             <div class="card-img-top product-image mb-1" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                             <h5 class="card-title text-uppercase">{{ product.name }}</h5>
-                            <p class="card-text fa fa-dollar">{{ product.price }}</p>
+                            <p class="card-text fa fa-euro">{{ product.price }}</p>
                         </div>
                     </a>
                 </div>
