--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -43,7 +43,7 @@
  <!-- Filter and more search option -->
 <div class="row justify-content-center">
     <form class="form-inline px-4 mt-4" action="{% url 'filter' %}" method="GET">
-        <p class="font-weight-bolder h5 mr-2">Filter your search by:</p>
+        <p class="font-weight-bolder h5 mr-2">Search by:</p>
         <input class="form-control mb-1 mr-sm-2" type="search" placeholder="Name: iPhone" name="q">
         <input class="form-control mb-1 mr-sm-2" type="search" placeholder="Brand: Apple" name="brand"/>
         <input class="form-control mb-1 mr-sm-2" type="year" placeholder="Year: 2019" name="year"/>
@@ -60,7 +60,7 @@
                     <div class="card card-body my-3">
                         <div class="card-img-top product-image mb-1" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
                             <h5 class="card-title text-uppercase">{{ product.name }}</h5>
-                            <p class="card-text fa fa-dollar">{{ product.price }}</p>
+                            <p class="card-text fa fa-euro">{{ product.price }}</p>
                     </div>
                 </a>
             </div>
