--- a/templates/base.html
+++ b/templates/base.html
@@ -98,13 +98,13 @@
             <div class="footer-pad">
                 <h4>Support</h4>
                 <ul class="list-unstyled">
-                    <li><a href="{% url 'email' %}">Contact Us </a></li>
+                    <li><a href="{% url 'email' %}">Contact us </a></li>
                     <li>
                         <address>
                             <strong>iShop</strong><br>
-                            1234 Street<br>
+                            11 Highfield Road<br>
                             Dublin, Ireland<br>
-                            <abbr title="Phone"></abbr><i class="fa fa-phone"></i> (353) - 871127890
+                            <abbr title="Phone"></abbr><i class="fa fa-phone"></i> (353) - 871129360
                         </address>
                     </li>
                 </ul>
@@ -112,7 +112,7 @@
         </div>
             <div class="col-md-4">
             <!--Footer column3 socil media-->
-                <h4>Follow Us</h4>
+                <h4> Follow Us</h4>
                 <ul class="social-network social-circle">
                 <li><a href="https://twitter.com/orly1100" class="icoTwitter" title="twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/tariqalrehily/" class="icoLinkedin" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a></li>
